examples/test/testpolicy6107.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6107
  namespace: namespace302
spec:
  podSelector:
    matchLabels:
      key40: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value41
          key32: value43
      podSelector:
        matchLabels:
          key28: value22
          key40: value42
          key43: value47
